--- a/src/blocks/card/card__likes-container/card__likes-container.css
+++ b/src/blocks/card/card__likes-container/card__likes-container.css
@@ -2,7 +2,6 @@
     display: flex;
     display: -webkit-flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
-    -webkit-justify-content: center;
-    text-align: center;
 }
